// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bug 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "statements ✍: 85.71 % 🎑 branches 🎋: 100 % 🎑 functions 🕸: 100 % 🎑 lines 📜: 85.71 %",
        "hasDecorations": false,
        "newDecorations": undefined,
        "secondBarMessage": "☔11",
        "thirdBarMessage": "_modules/format-json.spec.js",
      },
    ],
  ],
  "lintFile": "/home/s/repos/services/packages/magic-beans/src/_modules/format-json.js",
  "lintOnlyFile": undefined,
  "linted": Array [],
}
`;

exports[`happy scenario 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🎑 branches 🎋: 50 % 🎑 functions 🕸: 100 % 🎑 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "2",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/both-have-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "9",
            "number",
          ],
        },
        "secondBarMessage": undefined,
        "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "NO CHANGE ☄ ✍: 100 % ☄ 🎋: 50 % ☄ 🕸: 100 % ☄ 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "5": "{ a: 1, b: 2 }",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/both-have-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🎑 branches 🎋: 50 % 🎑 functions 🕸: 100 % 🎑 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "9",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/file-has-logs.spec.js",
      },
    ],
  ],
  "lintFile": "/home/s/repos/niketa/packages/node/test-data/success/file-has-logs.js",
  "lintOnlyFile": undefined,
  "linted": Array [
    "/home/s/repos/niketa/packages/node/test-data/success/both-have-logs.js",
    "/home/s/repos/niketa/packages/node/test-data/failed-expectation/file-has-logs.spec.js",
    "/home/s/repos/niketa/packages/node/test-data/success/both-have-logs.spec.js",
  ],
}
`;

exports[`parallel scenario 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🎑 branches 🎋: 50 % 🎑 functions 🕸: 100 % 🎑 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "2",
            "number",
            "{ a: 1, b: 2 }",
          ],
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "[ 1, 2, 3 ] { a: 1, b: 2 }",
            "1",
          ],
        },
        "secondBarMessage": undefined,
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": false,
          "logData": Array [
            "9",
            "number",
          ],
        },
        "secondBarMessage": undefined,
        "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "statements ✍: 100 % 🎑 branches 🎋: 50 % 🎑 functions 🕸: 100 % 🎑 lines 📜: 100 %",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "2": "9",
            "3": "number",
          },
        },
        "secondBarMessage": "☔5",
        "thirdBarMessage": "success/file-has-logs.spec.js",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "❌",
        "hasDecorations": true,
        "newDecorations": Object {
          "correct": true,
          "logData": Object {
            "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
            "8": "1",
          },
        },
        "secondBarMessage": undefined,
        "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
      },
    ],
  ],
  "lintFile": "/home/s/repos/niketa/packages/node/test-data/failed-expectation/spec-has-logs.spec.js",
  "lintOnlyFile": undefined,
  "linted": Array [
    "/home/s/repos/niketa/packages/node/test-data/success/both-have-logs.js",
    "/home/s/repos/niketa/packages/node/test-data/failed-expectation/spec-has-logs.js",
    "/home/s/repos/niketa/packages/node/test-data/failed-expectation/file-has-logs.spec.js",
    "/home/s/repos/niketa/packages/node/test-data/success/file-has-logs.js",
  ],
}
`;
